/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
}

group = 'com.lwohvye'
version = '4.0.0-kappa'
java.sourceCompatibility = JavaVersion.VERSION_20

java {
    withSourcesJar()
}

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/lWoHvYe/eladmin")
            credentials {
                // uses the Elvis operator (if-not-null-else shorthand) ?:.
                // If the expression to the left of ?: is not null, the Elvis operator returns it;
                // otherwise, it returns the expression to the right.
                // Note that the expression on the right-hand side is evaluated only if the left-hand side is null.
                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
                password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
            }
        }
    }
}

signing {
    //    The "CI" environment variable is set by GitHub Actions
    required { !version.endsWith("-SNAPSHOT") && System.getenv("CI") == null }
    publishing.publications.configureEach {
        sign it
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += '--enable-preview'
}
